 * @copyright       Copyright © 2023  - 2024 brambring.nl - All Rights Reserved
 * @license         GNU General Public License version 3 or later
 * This is the change log for the component com_blc, the content plugin plg_blc_content and the system plugin plg_system_blc
 */
/**
 * + Addition
 * - Removal
 * ^ Change
 * # Fix
 * ! Security
 * L Language
 * N Note
 */
24.44.6509
 # Database unique key error. Please purge the links of the problem persists
24.44.6508
 + Fixed a bug where an unpublished plugin was accessed.
 + Added hooks to clean up after plugin de-activation or de-installation. Works only in Joomla 5
 + Added button to clean up the database (for exampel after plugin de-installation on Joomla 4)
 + Added hooks to re-extract content after the state is changed in a list view
24.44.6473
 # J4 backward compability issue in  onAjaxBlcReport
 ^ update not replace link storage
 ^ sort options in header bar
 ^ made main package postgresql ready
 ^ Interface changes - ensure all plugins are updated as well
 # onBlcExtract: only set extractor name if the extractor actualy did some work
 # TagParser Corrected tag pattern for attributes with '-', fixed unquoted values for attributes
24.44.6443
 + Added bubble with count to the menu and dashboard BLC blocks
 - Removed the check on cron state. Now the pseudo cron will always show the broken count as bubble
24.44.6437
 + Added verbose logging to Log (enabled in global configuration under checkers)
 L Added missing lanuauge string for resuming scheduled tasks
 # Set live_site after exception
 # Added follow 301/302 to external checker (for google docs)
24.44.6420
 # Empty reports send
 ^ reworked the links filters. Think got all the deadlocks
24.44.6385
 ^ Reworked Reporting
24.44.6373
 ^ site url now as parameter in the component (pseudo live_site)
24.44.6372
 ^ Parked domain filters reworked
 ^ reworked 'check pending' state.
 ^ reworked filters (View & Fix Links) to show correct link count